--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,36 +1,410 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<meta charset=UTF-8><meta content="IE=edge"http-equiv=X-UA-Compatible><meta content="width=device-width,initial-scale=1"name=viewport><script src=eel.js></script><style>.wrapper{width:100%;height:400px;display:flex;flex-direction:column;justify-content:center;align-items:center;gap:30px}.url{outline:0;color:#9b9b9b;transition:all .5s ease-in-out}.url:hover{color:#777676}.form__group{position:relative;padding:15px 0 0;margin-top:10px;width:50%}.form__field{font-family:inherit;width:100%;border:0;border-bottom:2px solid #9b9b9b;outline:0;font-size:1.3rem;color:#fff;padding:7px 0;background:0 0;transition:border-color .2s}.form__field::placeholder{color:transparent}.form__field:placeholder-shown~.form__label{font-size:1.3rem;cursor:text;top:20px}.form__label{position:absolute;top:0;display:block;transition:.2s;font-size:1rem;color:#9b9b9b}.form__field:focus{padding-bottom:6px;font-weight:700;border-width:3px;border-image:linear-gradient(to right,#11998e,#38ef7d);border-image-slice:1}.form__field:focus~.form__label{position:absolute;top:0;display:block;transition:.2s;font-size:1rem;color:#11998e;font-weight:700}.form__field:invalid,.form__field:required{box-shadow:none}body{font-family:Poppins,sans-serif;display:flex;flex-direction:column;justify-content:center;align-items:center;min-height:100vh;font-size:1.5rem;background-color:#222}.button-29{align-items:center;appearance:none;background-image:radial-gradient(100% 100% at 100% 0,#5adaff 0,#5468ff 100%);border:0;border-radius:6px;box-shadow:rgba(45,35,66,.4) 0 2px 4px,rgba(45,35,66,.3) 0 7px 13px -3px,rgba(58,65,111,.5) 0 -3px 0 inset;box-sizing:border-box;color:#fff;cursor:pointer;display:inline-flex;font-family:"JetBrains Mono",monospace;height:48px;justify-content:center;line-height:1;list-style:none;overflow:hidden;padding-left:16px;padding-right:16px;position:relative;text-align:left;text-decoration:none;transition:box-shadow .15s,transform .15s;user-select:none;-webkit-user-select:none;touch-action:manipulation;white-space:nowrap;will-change:box-shadow,transform;font-size:18px}.button-29:focus{box-shadow:#3c4fe0 0 0 0 1.5px inset,rgba(45,35,66,.4) 0 2px 4px,rgba(45,35,66,.3) 0 7px 13px -3px,#3c4fe0 0 -3px 0 inset}.button-29:hover{box-shadow:rgba(45,35,66,.4) 0 4px 8px,rgba(45,35,66,.3) 0 7px 13px -3px,#3c4fe0 0 -3px 0 inset;transform:translateY(-2px)}.button-29:active{box-shadow:#3c4fe0 0 3px 7px inset;transform:translateY(2px)}ol.gradient-list>li,ol.gradient-list>li::before{box-shadow:.25rem .25rem .6rem rgba(0,0,0,.05),0 .5rem 1.125rem rgba(75,0,0,.05)}*,:after,:before{box-sizing:border-box}body,html{margin:0;padding:0}main{display:block;margin:0 auto;max-width:40rem;padding:1rem}ol.gradient-list{counter-reset:gradient-counter;list-style:none;margin:1.75rem 0;padding-left:1rem}ol.gradient-list>li{background:#fff;border-radius:0 .5rem .5rem .5rem;counter-increment:gradient-counter;margin-top:1rem;min-height:3rem;padding:1rem 1rem 1rem 3rem;position:relative}ol.gradient-list>li::after,ol.gradient-list>li::before{background:linear-gradient(135deg,#83e4e2 0,#a2ed56 100%);border-radius:1rem 1rem 0 1rem;content:'';height:3rem;left:-1rem;overflow:hidden;position:absolute;top:-1rem;width:3rem}ol.gradient-list>li::before{align-items:flex-end;content:counter(gradient-counter);color:#1d1f20;display:flex;font:900 1.5em/1 Montserrat;justify-content:flex-end;padding:.125em .25em;z-index:1}ol.gradient-list>li:nth-child(10n+1):before{background:linear-gradient(135deg,rgba(162,237,86,.2) 0,rgba(253,220,50,.2) 100%)}ol.gradient-list>li:nth-child(10n+2):before{background:linear-gradient(135deg,rgba(162,237,86,.4) 0,rgba(253,220,50,.4) 100%)}ol.gradient-list>li:nth-child(10n+3):before{background:linear-gradient(135deg,rgba(162,237,86,.6) 0,rgba(253,220,50,.6) 100%)}ol.gradient-list>li:nth-child(10n+4):before{background:linear-gradient(135deg,rgba(162,237,86,.8) 0,rgba(253,220,50,.8) 100%)}ol.gradient-list>li:nth-child(10n+5):before{background:linear-gradient(135deg,#a2ed56 0,#fddc32 100%)}ol.gradient-list>li:nth-child(10n+6):before{background:linear-gradient(135deg,rgba(162,237,86,.8) 0,rgba(253,220,50,.8) 100%)}ol.gradient-list>li:nth-child(10n+7):before{background:linear-gradient(135deg,rgba(162,237,86,.6) 0,rgba(253,220,50,.6) 100%)}ol.gradient-list>li:nth-child(10n+8):before{background:linear-gradient(135deg,rgba(162,237,86,.4) 0,rgba(253,220,50,.4) 100%)}ol.gradient-list>li:nth-child(10n+9):before{background:linear-gradient(135deg,rgba(162,237,86,.2) 0,rgba(253,220,50,.2) 100%)}ol.gradient-list>li:nth-child(10n+10):before{background:linear-gradient(135deg,rgba(162,237,86,0) 0,rgba(253,220,50,0) 100%)}ol.gradient-list>li+li{margin-top:2rem}.loader{display:grid;grid-template-columns:1fr 1fr 1fr;grid-gap:14px}.loader.hidden{display:none}.loader div{width:40px;height:40px;position:relative;display:flex;justify-content:center;align-items:center;background-color:#66cdaa;border-radius:50%}.loader div:after,.loader div:before{content:'';width:40px;height:40px;position:absolute;border-radius:50%}.loader div:before{background-color:#ffdab9;animation:scale-1 2.4s linear infinite}.loader div:after{background-color:#66cdaa;animation:scale-2 2.4s linear infinite}.loader div:nth-child(2):after,.loader div:nth-child(2):before{animation-delay:.3s}.loader div:nth-child(3):after,.loader div:nth-child(3):before{animation-delay:.6s}.loader div:nth-child(4):after,.loader div:nth-child(4):before{animation-delay:.9s}.loader div:nth-child(5):after,.loader div:nth-child(5):before{animation-delay:1.2s}.loader div:nth-child(6):after,.loader div:nth-child(6):before{animation-delay:1.5s}.loader div:nth-child(7):after,.loader div:nth-child(7):before{animation-delay:1.8s}.loader div:nth-child(8):after,.loader div:nth-child(8):before{animation-delay:2.1s}.loader div:nth-child(9):after,.loader div:nth-child(9):before{animation-delay:2.4s}@-moz-keyframes scale-1{0%{transform:scale(0);z-index:2}100%,50%{transform:scale(1)}}@-webkit-keyframes scale-1{0%{transform:scale(0);z-index:2}100%,50%{transform:scale(1)}}@-o-keyframes scale-1{0%{transform:scale(0);z-index:2}100%,50%{transform:scale(1)}}@keyframes scale-1{0%{transform:scale(0);z-index:2}100%,50%{transform:scale(1)}}@-moz-keyframes scale-2{0%,50%{transform:scale(0)}100%{transform:scale(1)}}@-webkit-keyframes scale-2{0%,50%{transform:scale(0)}100%{transform:scale(1)}}@-o-keyframes scale-2{0%,50%{transform:scale(0)}100%{transform:scale(1)}}@keyframes scale-2{0%,50%{transform:scale(0)}100%{transform:scale(1)}}</style><title>Document</title><div class=wrapper><div class="field form__group"><input class=form__field id=name name=name placeholder=Name required type=input> <label class=form__label for=name>Name</label></div><button class=button-29 onclick=getValue() role=button>Button 29</button></div><div class="hidden loader"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div><div class=urls></div>
+<meta charset=UTF-8>
+<meta content="IE=edge" http-equiv=X-UA-Compatible>
+<meta content="width=device-width,initial-scale=1" name=viewport>
+<script src=eel.js></script>
+<style>
+  .wrapper {
+    width: 100%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px
+  }
 
-  <script type="text/javascript">
-    async function getValue() {
-      const loader = document.querySelector('.loader')
-      loader.classList.remove('hidden')
-      const container = document.querySelector('.urls')
-      const inputValue = document.getElementById('name').value
-      container.innerHTML = ''
-      let transformed = []
-      const list = document.createElement('ol')
-      list.classList.add('gradient-list')
+  .url {
+    outline: 0;
+    color: #9b9b9b;
+    transition: all .5s ease-in-out
+  }
 
-      let res = await eel.parse_sites(inputValue)()
-      loader.classList.add('hidden')
-      console.log(res);
-      if (res) Object.keys(res).forEach((key, index) => {
-        const listItem = document.createElement('li')
-        const a = document.createElement('a')
-        a.href = res[key]
-        a.target = '_blank'
-        a.textContent = key
-        a.classList.add('url')
-        listItem.appendChild(a)
-        list.appendChild(listItem)
-      })
+  .url:hover {
+    color: #777676
+  }
 
-      container.appendChild(list)
+  .form__group {
+    position: relative;
+    padding: 15px 0 0;
+    margin-top: 10px;
+    width: 50%
+  }
+
+  .form__field {
+    font-family: inherit;
+    width: 100%;
+    border: 0;
+    border-bottom: 2px solid #9b9b9b;
+    outline: 0;
+    font-size: 1.3rem;
+    color: #fff;
+    padding: 7px 0;
+    background: 0 0;
+    transition: border-color .2s
+  }
+
+  .form__field::placeholder {
+    color: transparent
+  }
+
+  .form__field:placeholder-shown~.form__label {
+    font-size: 1.3rem;
+    cursor: text;
+    top: 20px
+  }
+
+  .form__label {
+    position: absolute;
+    top: 0;
+    display: block;
+    transition: .2s;
+    font-size: 1rem;
+    color: #9b9b9b
+  }
+
+  .form__field:focus {
+    padding-bottom: 6px;
+    font-weight: 700;
+    border-width: 3px;
+    border-image: linear-gradient(to right, #11998e, #38ef7d);
+    border-image-slice: 1
+  }
+
+  .form__field:focus~.form__label {
+    position: absolute;
+    top: 0;
+    display: block;
+    transition: .2s;
+    font-size: 1rem;
+    color: #11998e;
+    font-weight: 700
+  }
+
+  .form__field:invalid,
+  .form__field:required {
+    box-shadow: none
+  }
+
+  body {
+    font-family: Poppins, sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    font-size: 1.5rem;
+    background-color: #222
+  }
+
+  .button-29 {
+    align-items: center;
+    appearance: none;
+    background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
+    border: 0;
+    border-radius: 6px;
+    box-shadow: rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, rgba(58, 65, 111, .5) 0 -3px 0 inset;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-flex;
+    font-family: "JetBrains Mono", monospace;
+    height: 48px;
+    justify-content: center;
+    line-height: 1;
+    list-style: none;
+    overflow: hidden;
+    padding-left: 16px;
+    padding-right: 16px;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    transition: box-shadow .15s, transform .15s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    will-change: box-shadow, transform;
+    font-size: 18px
+  }
+
+  .button-29:focus {
+    box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset
+  }
+
+  .button-29:hover {
+    box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+    transform: translateY(-2px)
+  }
+
+  .button-29:active {
+    box-shadow: #3c4fe0 0 3px 7px inset;
+    transform: translateY(2px)
+  }
+
+  ol.gradient-list>li,
+  ol.gradient-list>li::before {
+    box-shadow: .25rem .25rem .6rem rgba(0, 0, 0, .05), 0 .5rem 1.125rem rgba(75, 0, 0, .05)
+  }
+
+  *,
+  :after,
+  :before {
+    box-sizing: border-box
+  }
+
+  body,
+  html {
+    margin: 0;
+    padding: 0
+  }
+
+  main {
+    display: block;
+    margin: 0 auto;
+    max-width: 40rem;
+    padding: 1rem
+  }
+
+  ol.gradient-list {
+    counter-reset: gradient-counter;
+    list-style: none;
+    margin: 1.75rem 0;
+    padding-left: 1rem
+  }
+
+  ol.gradient-list>li {
+    background: #fff;
+    border-radius: 0 .5rem .5rem .5rem;
+    counter-increment: gradient-counter;
+    margin-top: 1rem;
+    min-height: 3rem;
+    padding: 1rem 1rem 1rem 3rem;
+    position: relative
+  }
+
+  ol.gradient-list>li::after,
+  ol.gradient-list>li::before {
+    background: linear-gradient(135deg, #83e4e2 0, #a2ed56 100%);
+    border-radius: 1rem 1rem 0 1rem;
+    content: '';
+    height: 3rem;
+    left: -1rem;
+    overflow: hidden;
+    position: absolute;
+    top: -1rem;
+    width: 3rem
+  }
+
+  ol.gradient-list>li::before {
+    align-items: flex-end;
+    content: counter(gradient-counter);
+    color: #1d1f20;
+    display: flex;
+    font: 900 1.5em/1 Montserrat;
+    justify-content: flex-end;
+    padding: .125em .25em;
+    z-index: 1
+  }
+
+  ol.gradient-list>li:nth-child(10n+1):before {
+    background: linear-gradient(135deg, rgba(162, 237, 86, .2) 0, rgba(253, 220, 50, .2) 100%)
+  }
+
+  ol.gradient-list>li:nth-child(10n+2):before {
+    background: linear-gradient(135deg, rgba(162, 237, 86, .4) 0, rgba(253, 220, 50, .4) 100%)
+  }
+
+  ol.gradient-list>li:nth-child(10n+3):before {
+    background: linear-gradient(135deg, rgba(162, 237, 86, .6) 0, rgba(253, 220, 50, .6) 100%)
+  }
+
+  ol.gradient-list>li:nth-child(10n+4):before {
+    background: linear-gradient(135deg, rgba(162, 237, 86, .8) 0, rgba(253, 220, 50, .8) 100%)
+  }
+
+  ol.gradient-list>li:nth-child(10n+5):before {
+    background: linear-gradient(135deg, #a2ed56 0, #fddc32 100%)
+  }
+
+  ol.gradient-list>li:nth-child(10n+6):before {
+    background: linear-gradient(135deg, rgba(162, 237, 86, .8) 0, rgba(253, 220, 50, .8) 100%)
+  }
+
+  ol.gradient-list>li:nth-child(10n+7):before {
+    background: linear-gradient(135deg, rgba(162, 237, 86, .6) 0, rgba(253, 220, 50, .6) 100%)
+  }
+
+  ol.gradient-list>li:nth-child(10n+8):before {
+    background: linear-gradient(135deg, rgba(162, 237, 86, .4) 0, rgba(253, 220, 50, .4) 100%)
+  }
+
+  ol.gradient-list>li:nth-child(10n+9):before {
+    background: linear-gradient(135deg, rgba(162, 237, 86, .2) 0, rgba(253, 220, 50, .2) 100%)
+  }
+
+  ol.gradient-list>li:nth-child(10n+10):before {
+    background: linear-gradient(135deg, rgba(162, 237, 86, 0) 0, rgba(253, 220, 50, 0) 100%)
+  }
+
+  ol.gradient-list>li+li {
+    margin-top: 2rem
+  }
+
+  .loader {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 14px
+  }
+
+  .loader.hidden {
+    display: none
+  }
+
+  .loader div {
+    width: 40px;
+    height: 40px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #66cdaa;
+    border-radius: 50%
+  }
+
+  .loader div:after,
+  .loader div:before {
+    content: '';
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    border-radius: 50%
+  }
+
+  .loader div:before {
+    background-color: #ffdab9;
+    animation: scale-1 2.4s linear infinite
+  }
+
+  .loader div:after {
+    background-color: #66cdaa;
+    animation: scale-2 2.4s linear infinite
+  }
+
+  .loader div:nth-child(2):after,
+  .loader div:nth-child(2):before {
+    animation-delay: .3s
+  }
+
+  .loader div:nth-child(3):after,
+  .loader div:nth-child(3):before {
+    animation-delay: .6s
+  }
+
+  .loader div:nth-child(4):after,
+  .loader div:nth-child(4):before {
+    animation-delay: .9s
+  }
+
+  .loader div:nth-child(5):after,
+  .loader div:nth-child(5):before {
+    animation-delay: 1.2s
+  }
+
+  .loader div:nth-child(6):after,
+  .loader div:nth-child(6):before {
+    animation-delay: 1.5s
+  }
+
+  .loader div:nth-child(7):after,
+  .loader div:nth-child(7):before {
+    animation-delay: 1.8s
+  }
+
+  .loader div:nth-child(8):after,
+  .loader div:nth-child(8):before {
+    animation-delay: 2.1s
+  }
+
+  .loader div:nth-child(9):after,
+  .loader div:nth-child(9):before {
+    animation-delay: 2.4s
+  }
+
+  @keyframes scale-1 {
+    0% {
+      transform: scale(0);
+      z-index: 2
     }
-  </script>
+
+    100%,
+    50% {
+      transform: scale(1)
+    }
+  }
+
+
+  @keyframes scale-2 {
+
+    0%,
+    50% {
+      transform: scale(0)
+    }
+
+    100% {
+      transform: scale(1)
+    }
+  }
+</style>
+<title>Document</title>
+<div class=wrapper>
+  <div class="field form__group"><input class=form__field id=name name=name placeholder=Name required type=input> <label
+      class=form__label for=name>Name</label></div><button class=button-29 onclick=getValue()
+    role=button>search</button>
+</div>
+<div class="hidden loader">
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
+<div class=urls></div>
+
+<script type="text/javascript">
+  async function getValue() {
+    const loader = document.querySelector('.loader')
+    loader.classList.remove('hidden')
+    const container = document.querySelector('.urls')
+    const inputValue = document.getElementById('name').value
+    container.innerHTML = ''
+    let transformed = []
+    const list = document.createElement('ol')
+    list.classList.add('gradient-list')
+
+    let res = await eel.parse_sites(inputValue)()
+    loader.classList.add('hidden')
+    console.log(res);
+    if (res) Object.keys(res).forEach((key, index) => {
+      const listItem = document.createElement('li')
+      const a = document.createElement('a')
+      a.href = res[key]
+      a.target = '_blank'
+      a.textContent = key
+      a.classList.add('url')
+      listItem.appendChild(a)
+      list.appendChild(listItem)
+    })
+
+    container.appendChild(list)
+  }
+</script>
 </body>
 
 </html>
